# povm-toolbox

./: .gitignore  .mergify.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE.txt  README.md  SECURITY.md  base_povm.py  job_metadata_c23fe7ca-b549-4b7d-8d71-231246be2758.pkl  povm_implementation.py  product_povm.py  pyproject.toml  requirements.txt  single_qubit_povm.py  test.ipynb  tox.ini  utilities.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml
.github/workflows/: README.md  citation.yml  coverage.yml  docs.yml  doctest.yml  lint.yml  publish_code.yml  publish_docs.yml  release.yml  test.yml  test_development_versions.yml  test_latest_versions.yml  test_minimum_versions.yml
docs/: conf.py  index.rst  install.rst
docs/_templates/autosummary/: class.rst
docs/apidocs/: povm_toolbox.library.metadata.rst  povm_toolbox.library.povm_implementation.rst  povm_toolbox.library.rst  povm_toolbox.post_processor.rst  povm_toolbox.quantum_info.base.rst  povm_toolbox.quantum_info.rst  povm_toolbox.rst  povm_toolbox.sampler.rst  povm_toolbox.utilities.rst
docs/explanations/: frame.rst  index.rst  introduction.rst  projective_measurement.rst  randomization.rst
docs/how_tos/: dilation.ipynb  dilation_measurements.ipynb  dual_optimization.ipynb  dual_optimizer.ipynb  index.rst  job_recovery.ipynb  layout.ipynb  non_ic_measurements.ipynb  saved_metadata.json
docs/tutorials/: dilation.ipynb  dilation_measurements.ipynb  getting_started.ipynb  index.rst  parametrized_circuit.ipynb  povm_sampler_pub.ipynb  randomized_measurements.ipynb  runtime_demo.ipynb  tutorial.ipynb
notebooks/: test.ipynb  tutorial.ipynb
povm_toolbox/: __init__.py  utilities.py
povm_toolbox/post_processor/: __init__.py  dual_from_empirical_frequencies.py  dual_from_k_local_empirical_frequencies.py  dual_from_marginal_probabilities.py  dual_from_state.py  dual_optimizer.py  empirical_frequencies.py  median_of_means.py  povm_post_processor.py  ppp_empirical_frequencies.py  ppp_state_marginal.py  ppp_state_optimal.py  state_marginal.py  state_optimal.py
povm_toolbox/quantum_info/: __init__.py  base_dual.py  base_frame.py  base_povm.py  multi_qubit_dual.py  multi_qubit_frame.py  multi_qubit_povm.py  product_dual.py  product_frame.py  product_povm.py  single_qubit_povm.py
povm_toolbox/quantum_info/base/: __init__.py  base_dual.py  base_frame.py  base_povm.py
povm_toolbox/quantum_info/frame/: base_dual.py  base_frame.py  base_povm.py  joint_frame.py  multi_qubit_dual.py  multi_qubit_frame.py  multi_qubit_povm.py  product_frame.py  product_povm.py
povm_toolbox/quantum_info/old/: base_povm.py  multi_qubit_povm.py  single_qubit_povm.py
povm_toolbox/sampler/: __init__.py  job.py  povm_pub_result.py  povm_sampler.py  povm_sampler_job.py  povm_sampler_pub.py  povm_sampler_result.py  result.py
povms/: base_povm.py  multi_qubit_povm.py  pm_sim_implementation.py  povm_implementation.py  product_povm.py  single_qubit_povm.py  utilities.py
povms/post_processor/: povm_post_processor.py
povms/quantum_info/: base_povm.py  multi_qubit_povm.py  product_povm.py  single_qubit_povm.py
povms/sampler/: job.py  povm_sampler.py  povm_sampler_pub.py  result.py
releasenotes/: config.yaml
releasenotes/notes/: add-get-snapshot-method-ee4f85a7b06cb373.yaml  combine-counts-9bd0d6639398af44.yaml  fix-staevector-sampler-seed-abd657986bfbaf34.yaml  fix-statevector-sampler-seed-85315e0ca2595ab3.yaml  fix-statevector-sampler-seed-da081a0f2cbfe254.yaml  handle-zero-division-f8c79be7f522e5ca.yaml  non-IC-measurement-64dfcd692fc68c1c.yaml  python-3.13-a773e48c5d799c49.yaml  read-only-operators-bae10ffedf6b683c.yaml  release_fix_trace_of_products-9bb81dfc2724ed1d.yaml  remove-aer-98195057605f1648.yaml  update-release-data-e609f893d702c1ed.yaml  virtual-shape-multiqubit-frame-adf7d2a13ea1cd56.yaml  windows-9f4aad27fad26b48.yaml
releasenotes/notes/0.1/: initial-release-61061fbfc329a5c1.yaml
test/: test_base_povm.py  test_implementation.py  test_multi_qubit_povm.py  test_pm_sim_implementation.py  test_povm_implementation.py  test_product_povm.py  test_single_qubit_povm.py  test_sq_povm.py  test_utilities.py
test/post_processor/: random_circuit_qubits=2_depth=1_seed=30.qpy  test_dual_from_empirical_frequencies.py  test_dual_from_marginal_probabilities.py  test_dual_from_state.py  test_dual_optimizer.py  test_median_of_means.py  test_post_processor.py
test/quantum_info/: probabilities_ProdOfMultiQubitPOVMs.npz  probabilities_ProdOfSingleQubitPOVMs.npz  test_multi_qubit_dual.py  test_multi_qubit_frame.py  test_multi_qubit_povm.py  test_product_dual.py  test_product_frame.py  test_product_povm.py  test_single_qubit_povm.py
test/sampler/: __init__.py  random_circuits.qpy  test_povm_pub_result.py  test_povm_sampler.py  test_povm_sampler_job.py  test_povm_sampler_pub.py  test_povm_sampler_result.py
