[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "povm_toolbox"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE.txt"}

requires-python = ">=3.9"

dependencies = [
    "numpy>=1.23",
    "numba>=0.59",
    "qiskit>=1.0",
    "qiskit-ibm-runtime>=0.24",
    "qiskit-aer>=0.14",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "povm_toolbox[test,doctest,nbtest,lint,docs,notebook-dependencies]",
]
basetest = [
    "tox>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
test = [
    "povm_toolbox[basetest]",
]
doctest = [
    "povm_toolbox[basetest]",
    "pytest-doctestplus>=1.2.1",
]
nbtest = [
    "povm_toolbox[basetest]",
    "nbmake>=1.5.0",
]
style = [
    "ruff>=0.4.0",
    "nbqa>=1.8.5",
    "typos>=1.20.0",
]
lint = [
    "povm_toolbox[style]",
    "mypy>=1.10.0",
    "pylint>=3.1.0",
    "reno>=4.1",
    "toml",
]
notebook-dependencies = [
    "povm_toolbox",
    "pylatexenc",
]
docs = [
    "qiskit-sphinx-theme~=1.16",
    "jupyter-sphinx",
    "sphinx-design",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "nbsphinx",
    "reno>=4.1",
    "pytest-doctestplus>=1.2.1",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.hatch.build.targets.wheel]
only-include = [
    "povm_toolbox",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = 3.9
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.9"
load-plugins=["pylint.extensions.docparams"]

[tool.pylint."messages control"]
disable = ["all"]
enable = [
    "reimported",
    "no-self-use",
    "no-else-raise",
    "redefined-argument-from-local",
    "redefined-builtin",
    "raise-missing-from",
    "cyclic-import",
    "unused-argument",
    "attribute-defined-outside-init",
    "no-else-return",
    "signature-differs",
    "differing-param-doc",
    "differing-type-doc",
    "missing-param-doc",
    "missing-type-doc",
    "missing-raises-doc",
    "useless-param-doc",
    "useless-type-doc",
    "missing-any-param-doc",
    "missing-return-doc",
    "missing-return-type-doc",
    "missing-yield-doc",
    "missing-yield-type-doc",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore:::.*qiskit.opflow*"]
testpaths = ["./povm_toolbox/", "./test/"]

[tool.ruff]
line-length = 100
src = ["povm_toolbox", "test"]
extend-include = ["*.ipynb"]
target-version = "py39"

[tool.ruff.lint]
select = [
    "I",   # isort
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # pyflakes
    "PL",  # pylint
    "RUF", # ruff
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
]
ignore = [
    "E501",
    "PLR2004",
]
explicit-preview-rules = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 10
max-statements = 65

[tool.ruff.lint.extend-per-file-ignores]
"docs/**/*" = [
    "E402", # module level import not at top of file
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = """
# \\(C\\) Copyright IBM 2024\\.
#
# This code is licensed under the Apache License, Version 2\\.0\\. You may
# obtain a copy of this license in the LICENSE\\.txt file in the root directory
# of this source tree or at http\\:\\/\\/www\\.apache\\.org\\/licenses\\/LICENSE\\-2\\.0\\.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals\\.
"""

[tool.typos.default.extend-words]
arange = "arange"
aer = "aer"
IY = "IY"
ket = "ket"
